--- a/src/app/components/sesionexpirada/sesionexpirada.component.html
+++ b/src/app/components/sesionexpirada/sesionexpirada.component.html
@@ -3,6 +3,8 @@
     <h2>Sesión Expirada</h2>
     <p>Tu sesión ha caducado por inactividad o token inválido.</p>
     <p>Por favor, vuelve a iniciar sesión para continuar usando SoulPet.</p>
-    <button class="btn-volver" (click)="volverAlLogin()">Volver a Iniciar Sesión</button>
+    <button class="btn-volver" (click)="volverAlLogin()">
+      Volver a Iniciar Sesión
+    </button>
   </div>
 </div>
