--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,14 +4,20 @@
       <!-- Columna 1: Logo y descripción -->
       <div class="footer-column">
         <div class="footer-logo" routerLink="/home">
-          <img src="logosoulpet.png" alt="Soulpet Logo">
+          <img src="logosoulpet.png" alt="Soulpet Logo" />
           <span>Soulpet</span>
         </div>
         <p class="footer-description">
-          Conectando corazones humanos con almas peludas desde 2023. Encuentra tu compañero emocional perfecto.
+          Conectando corazones humanos con almas peludas desde 2023. Encuentra
+          tu compañero emocional perfecto.
         </p>
         <div class="social-links">
-          <a *ngFor="let social of socialIcons" [href]="social.url" target="_blank" rel="noopener">
+          <a
+            *ngFor="let social of socialIcons"
+            [href]="social.url"
+            target="_blank"
+            rel="noopener"
+          >
             <i [class]="social.icon"></i>
           </a>
         </div>
@@ -19,17 +25,17 @@
 
       <!-- Columnas de enlaces -->
       <div class="footer-column" *ngFor="let section of getFooterSections()">
-        <h3>{{section.title}}</h3>
+        <h3>{{ section.title }}</h3>
         <ul>
           <li *ngFor="let link of section.links">
-            <a [href]="link.url">{{link.text}}</a>
+            <a [href]="link.url">{{ link.text }}</a>
           </li>
         </ul>
       </div>
     </div>
 
     <div class="footer-bottom">
-      <p>© {{currentYear}} Soulpet. Todos los derechos reservados.</p>
+      <p>© {{ currentYear }} Soulpet. Todos los derechos reservados.</p>
       <div class="payment-methods">
         <i class="fab fa-cc-visa"></i>
         <i class="fab fa-cc-mastercard"></i>
